--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,2 +1,20 @@
 #加密配置
-from:123
+jasypt:
+  encryptor:
+    password: gfop
+
+spring:
+  redis:
+    host: localhost
+    port: 6379
+    password:123456
+  http:
+    multipart:
+      max-file-size: 1000MB
+      max-request-size: 1000MB
+
+cache:
+  redis:
+    expiration: 3601
+
+
