--- a/gfop-upms-service-dev.yml
+++ b/gfop-upms-service-dev.yml
@@ -19,11 +19,11 @@ spring:
     first:  #数据源1
       url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
       username: root
-      password: 123456
+      password: root
     second:  #数据源2
       url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
       username: root
-      password: 123456
+      password: root
     initial-size: 10
     max-active: 100
     min-idle: 10
