--- a/gfop-upms-service-dev.yml
+++ b/gfop-upms-service-dev.yml
@@ -16,14 +16,14 @@ spring:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.jdbc.Driver
     druid:
-    first:  #数据源1
-      url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
-      username: root
-      password: root
-    second:  #数据源2
-      url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
-      username: root
-      password: root
+      first:  #数据源1
+        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
+        username: root
+        password: root
+      second:  #数据源2
+        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
+        username: root
+        password: root
     initial-size: 10
     max-active: 100
     min-idle: 10
@@ -53,9 +53,9 @@ spring:
         
 #mybaits-plus配置，修改主键类型，mapper.xml、type 别名等
 mybatis-plus:
-  mapper-locations: classpath:/mapper/*/*Dao.xml
-  #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.ynjf.gfop.*.entity
+  mapper-locations: classpath:/mapper/**/*Dao.xml
+  #实体扫描，多个package用逗号或者分号分隔,1个*代表1个目录
+  typeAliasesPackage: com.ynjf.gfop.**.entity
   global-config:
     #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
     id-type: 0
