--- a/gfop-upms-service-dev.yml
+++ b/gfop-upms-service-dev.yml
@@ -17,11 +17,11 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     druid:
       first:  #数据源1
-        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
+        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&characterEncoding=UTF-8
         username: root
         password: root
       second:  #数据源2
-        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&characterEncoding=UTF-8
+        url: jdbc:mysql://localhost:3306/gfop?allowMultiQueries=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&characterEncoding=UTF-8
         username: root
         password: root
     initial-size: 10
